Added style and logo

--- a/src/app/modules/packages/details.html
+++ b/src/app/modules/packages/details.html
@@ -1,5 +1,10 @@
 <div class="package">
   <h2>{{package.name}}</h2>
+    <ul>
+      <li>Author: <code>{{package.author}}</code></li>
+      <li>Version: <code>{{package.version}}</code></li>
+      <li>Downloads: <code>{{package.downloads}}</code></li>
+    </ul>
 </div>
 
 <a ui-sref="packages">Back</a>
