--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -9,15 +9,20 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  background: #f0f0f0;
+}
+
+a {
+  color: $link_color;
+  text-decoration: none;
 }
 
 #header {
   .inner {
-    background: white;
     padding: 20px;
+    display: flex;
     .search {
       text-align: right;
+      flex: 1;
     }
   }
 }
@@ -46,21 +51,17 @@ body {
   flex: 1 0 auto;
   .inner {
     padding: 20px;
-    background: white;
   }
 }
 
 div.inner {
-  max-width: 900px;
+  max-width: 920px;
   margin: auto;
 }
 
 #footer {
-  background: #323a45;
+  background: #f0f0f0;
   color: #aaa;
   padding: 20px;
   text-align: center;
-  a {
-    color: white;
-  }
 }
