--- a/src/app/modules/user/login.html
+++ b/src/app/modules/user/login.html
@@ -5,14 +5,14 @@
   </p>
   <div class="row">
     <label>
-      Username<br />
-      <input type="text" ng-model="username" />
+      <span>Username</span>
+      <input type="text" name="username" ng-model="username" required />
     </label>
   </div>
   <div class="row">
     <label>
-      Password<br />
-      <input type="password" ng-model="password" />
+      <span>Password</span>
+      <input type="password" name="password" ng-model="password" required />
     </label>
   </div>
   <div class="row">
