--- a/src/app/modules/packages/packages.html
+++ b/src/app/modules/packages/packages.html
@@ -4,7 +4,7 @@
   </p>
   <div class="package" ng-repeat="package in packages">
     <h2>
-      <a ui-sref="package({id: package.id})">{{package.name}}</a>
+      <a ui-sref="package({name: package.name})">{{package.name}}</a>
     </h2>
     <ul>
       <li>Author: <code>{{package.author}}</code></li>
