--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -65,3 +65,11 @@ div.inner {
   padding: 20px;
   text-align: center;
 }
+
+// Notices
+
+p.info-notice {
+  background: #42aeff;
+  color: white;
+  padding: 1em;
+};
