--- a/src/app/modules/packages/details.html
+++ b/src/app/modules/packages/details.html
@@ -1,5 +1,8 @@
 <div class="package">
-  <h2>{{package.name}}</h2>
+  <h2>
+    <i class="fa fa-folder-o"></i>
+    {{package.name}}
+  </h2>
     <ul>
       <li>Author: <code>{{package.author}}</code></li>
       <li>Version: <code>{{package.version}}</code></li>
