--- a/src/app/modules/user/login.html
+++ b/src/app/modules/user/login.html
@@ -16,7 +16,7 @@
     </label>
   </div>
   <div class="row">
-    <input type="submit" class="button primary" value="Login" />
+    <input type="submit" class="md-button md-primary md-raised" value="Login" />
   </div>
 </form>
 
