Custom template for auto-complete widget

--- a/src/app/modules/user/signup.html
+++ b/src/app/modules/user/signup.html
@@ -28,6 +28,8 @@
     </label>
   </div>
   <div class="row">
-    <input type="submit" class="button" value="Submit" />
+    <md-button type="submit" class="md-raised md-primary">
+      Sign-up
+    </md-button>
   </div>
 </form>
