--- a/src/app/modules/user/login.html
+++ b/src/app/modules/user/login.html
@@ -16,7 +16,9 @@
     </label>
   </div>
   <div class="row">
-    <input type="submit" class="md-button md-primary md-raised" value="Login" />
+    <md-button type="submit" class="md-primary md-raised">
+      Login
+    </md-button>
   </div>
 </form>
 
