--- a/src/app/modules/packages/details.html
+++ b/src/app/modules/packages/details.html
@@ -1,4 +1,4 @@
-<div class="package">
+<div class="package" ng-if="package">
   <h2>
     <i class="fa fa-folder-o"></i>
     {{package.name}}
@@ -27,5 +27,9 @@
       </li>
     </ul>
 </div>
+
+<p class="error-notice" ng-if="error">
+  {{error}}
+</p>
 
 <a ui-sref="packages">Back</a>
