--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -78,8 +78,19 @@ a {
 
 #main {
   flex: 1 0 auto;
-  .inner {
+  div.inner {
     padding: 20px;
+    position: relative;
+    min-height: 200px;
+    .loader {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      background: rgba(255, 255, 255, 0.5);
+      width: 100%;
+      align-items: center;
+      justify-content: space-around;
+    }
   }
 }
 
@@ -108,3 +119,13 @@ p.info-notice {
   color: white;
   padding: 1em;
 };
+
+.error-notice {
+  border-radius: 4px;
+  padding: 1em;
+  background: #cb3837;
+  color: white;
+  li {
+    margin-left: 2em;
+  }
+}
