--- a/src/app/modules/packages/packages.html
+++ b/src/app/modules/packages/packages.html
@@ -1,6 +1,9 @@
 <div class="package-wrapper">
-  <p>
-    Browse package list | <a ui-sref="home">My packages</a>
+  <p class="info-notice" ng-if="search && packages.length > 0">
+    {{packages.length}} result(s) for <em>"{{search}}"</em>
+  </p>
+  <p class="info-notice" ng-if="search && packages.length == 0">
+    Sorry, no results for <em>"{{search}}"</em>
   </p>
   <div
     ng-include="'app/modules/packages/preview.html'"
