--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -114,18 +114,28 @@ code {
 
 // Notices
 
-p.info-notice {
-  background: #42aeff;
+.info-notice,
+.error-notice {
   color: white;
   padding: 1em;
+  border-radius: 2px;
+  a {
+    color: white;
+    text-decoration: underline;
+  }
+}
+p.info-notice {
+  background: #42aeff;
 };
 
 .error-notice {
-  border-radius: 4px;
-  padding: 1em;
   background: #cb3837;
-  color: white;
   li {
     margin-left: 2em;
   }
+}
+
+.error-404 {
+  font-size: 40px;
+  text-align: center;
 }
