--- a/src/style/form.scss
+++ b/src/style/form.scss
@@ -12,6 +12,8 @@ form.app-form {
     input[type=email] {
       padding: 4px;
       width: 300px;
+      border: 2px solid #e0e0e0;
+      border-radius: 2px;
     }
   }
 }
