--- a/src/app/modules/home/home.html
+++ b/src/app/modules/home/home.html
@@ -1,4 +1,4 @@
-<h2>Greetings, {{session.username}}!</h2>
+<h2>Greetings, {{session.user.username}}!</h2>
 <div class="home">
   <div class="user-packages">
     <h3>My packages</h3>
@@ -15,10 +15,10 @@
   <div class="user-profile">
     <h3>My profile</h3>
     <p>
-      <img ng-src="{{session.gravatar}}?s=200" alt="gravatar" />
+      <img ng-src="{{session.user.gravatar}}?s=200" alt="gravatar" />
     </p>
     <p>
-      <i class="fa fa-email"></i>{{session.email}}
+      {{session.user.email}}
     </p>
   </div>
 <div>
