Use ES6 for gulpfile

--- a/src/app/modules/packages/details.html
+++ b/src/app/modules/packages/details.html
@@ -3,6 +3,9 @@
     <i class="fa fa-folder-o"></i>
     {{package.name}}
   </h2>
+  <p>
+    {{package.description}}
+  </p>
     <ul>
       <li>Author: <code>{{package.author}}</code></li>
       <li>Version: <code>{{package.version}}</code></li>
