--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -66,7 +66,7 @@ a {
   background: $kubegray;
   color: white;
   height: 160px;
-  padding: 10px 0;
+  padding: 20px 0;
   img.logo {
     float: left;
     margin-right: 20px;
@@ -106,16 +106,22 @@ div.inner {
 }
 
 #footer {
-  background: #f0f0f0;
-  color: #aaa;
-  padding: 20px;
   text-align: center;
+  .inner {
+    padding: 1.5em;
+    border-top: 1px solid #ccc;
+  }
 }
 
 code {
   background: #eee;
   padding: 2px 4px;
   border-radius: 5px;
+}
+pre > code {
+  background: inherit;
+  padding: 0;
+  border-radius: 0;
 }
 
 // Notices
