--- a/src/app/modules/packages/details.html
+++ b/src/app/modules/packages/details.html
@@ -1,6 +1,5 @@
 <div class="package" ng-if="package">
   <h2>
-    <i class="fa fa-folder-o"></i>
     {{package.name}}
   </h2>
   <p>
@@ -22,14 +21,19 @@
         <a ui-sref="package({name: dependency})">{{dependency}}</a>
       </li>
     </ol>
-    <h3>Files</h3>
+    <h3>Templates</h3>
     <ul>
       <li ng-repeat="resource in package.manifest.resources">
+        <code>{{resource.type}}</code>
+        {{resource.name}}
         <a href ng-click="toggleResource(resource)">{{resource.file}}</a>
         <pre ng-if="resource.content"><code prism="yaml">{{resource.content}}</code></pre>
       </li>
     </ul>
     <a ng-href="{{downloadUrl()}}" class="md-button md-raised">
+      <md-tooltip>
+        Generate tarball
+      </md-tooltip>
       Download
     </a>
 </div>
