Added build_error helper

--- a/src/app/modules/user/login.html
+++ b/src/app/modules/user/login.html
@@ -1,6 +1,6 @@
 <h2>Login</h2>
 <form class="app-form" ng-submit="submit()">
-  <p class="error" ng-if="error">
+  <p class="error-notice" ng-if="error">
     {{error}}
   </p>
   <div class="row">
