--- a/src/style/sass/package.scss
+++ b/src/style/sass/package.scss
@@ -4,15 +4,38 @@
 }
 
 .package {
-  h2 {
-    a {
-      padding-left: 0.3em;
+  padding: 1.5em;
+  border: 5px solid #f0f0f0;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  min-height: 100px;
+  transition: all 0.4s;
+  background-color: #f0f0f0;
+  h2 a {
+    color: inherit;
+  }
+  &:hover {
+    background-color: white;
+    border-color: $link_color;
+    box-shadow: 0 15px 15px -15px #333;
+    h2 a {
+      color: $link_color;
     }
   }
-  padding: 20px;
-  border: 1px solid #f0f0f0;
-  box-shadow: 0 15px 15px -15px #333;
-  margin-bottom: 20px;
+  img.package-icon {
+    float: left;
+    margin-right: 1.5em;
+  }
+  div.package-meta {
+    float: right;
+    span {
+      background-color: #f0f0f0;
+      border-radius: 5px;
+      padding: 2px 6px;
+      margin-left: 0.8em;
+      text-shadow: 0 1px 0 white;
+    }
+  }
   pre.resource {
     background: #fafafa;
     padding: 1em;
