--- a/src/app/modules/packages/preview.html
+++ b/src/app/modules/packages/preview.html
@@ -9,7 +9,8 @@
   </div>
   <img ng-src="{{package.icon_url}}" class="package-icon" />
   <h2>
-    <a ui-sref="organization({name: package.organization})">{{package.organization}}</a> /
+    <a ui-sref="organization({name: package.organization})" class="organization-name">
+      {{package.organization}}</a> /
     <a ui-sref="package({name: package.name})">{{package.appname}}</a>
   </h2>
   <code>v{{package.version}}</code> - Updated on {{package.updated_at | date}}
