--- a/src/style/sass/package.scss
+++ b/src/style/sass/package.scss
@@ -34,12 +34,23 @@
   }
   div.package-meta {
     float: right;
-    span {
+    span, a {
       background-color: #f0f0f0;
       border-radius: 5px;
       padding: 2px 6px;
       margin-left: 0.8em;
       text-shadow: 0 1px 0 white;
+      color: inherit;
+    }
+  }
+  .package-stars {
+    i.fa {
+      transition: transform 0.4s;
+      color: #ccc;
+    }
+    &.starred i.fa {
+      color: goldenrod;
+      transform: rotate(72deg);
     }
   }
   pre.resource {
