Added sort by stars (fix #21), Downloads is now default sort (fix #32)

--- a/src/style/sass/app.scss
+++ b/src/style/sass/app.scss
@@ -193,6 +193,12 @@ md-tooltip {
   font-size: 14px;
 }
 
+md-select-menu, md-select-value {
+  i.fa {
+    color: #555;
+    margin-right: 1em;
+  }
+}
 a:not(.md-button),
 a:not(.md-button):hover {
   color: $link_color;
