--- a/src/app/modules/packages/list.html
+++ b/src/app/modules/packages/list.html
@@ -8,16 +8,18 @@
   <p class="error-notice" ng-if="error">
     {{error}}
   </p>
-  <p>
+  <md-input-container>
     <md-select
-      placeholder="sort package list"
-      ng-model="querySort"
-      md-on-close="applySort(querySort)">
+      ng-model="selectedSort"
+      md-on-close="applySort(selectedSort)">
       <md-option ng-repeat="(label, params) in availableSorts" ng-value="params">
-        {{label}}
+        <i class="fa fa-{{params.icon}}"></i> {{label}}
       </md-option>
     </md-select>
-  </p>
+    <md-tooltip>
+      Sort packages
+    </md-tooltip>
+  </md-input-container>
   <div
     ng-include="'app/modules/packages/preview.html'"
     ng-repeat="package in packages"
