Renamed Download to Generate - fix #34

--- a/src/app/modules/packages/package.html
+++ b/src/app/modules/packages/package.html
@@ -39,9 +39,9 @@
   </ol>
   <a href ng-click="downloadTarball($event)" class="md-button md-raised">
     <md-tooltip>
-      Generate tarball
+      Generate templates in tarball
     </md-tooltip>
-    Download
+    Generate
   </a>
 </div>
 
