--- a/kpm/jsonnet/manifest.jsonnet.j2
+++ b/kpm/jsonnet/manifest.jsonnet.j2
@@ -1,30 +1,24 @@
 local kpm = import "kpm.libjsonnet";
 
 function(
-  namespace="default",
-  variables={namespace: namespace},
-  shards=null,
+ params={}
 )
 
-{
-  package: {{manifest.package}},
+kpm.package({
+  package:  {expander: 'jinja2'} + {{manifest.package}},
 
-  variables: kpm.variables(
-    {{manifest.variables}}, variables),
+  variables: {{manifest.variables}},
 
 {% if manifest.shards is defined and manifest.shards|length > 0 %}
- shards: kpm.shards(
-   {{manifest.shards}}, shards),
+ shards: {{manifest.shards}},
 {% endif %}
 
 {% if manifest.resources is defined and manifest.resources|length > 0 %}
- resources: kpm.resources([{% for item in manifest.resources %}
-
-    {{item|json}} + {template: (importstr "templates/{{item.file}}")}
-   ,
-{%- endfor %}], $.shards, $.variables),
-
+ resources: [{% for item in manifest.resources %}
+    {{item|json}} + {template: (importstr "templates/{{item.file}}")},
+{%- endfor %}
+],
 {% endif %}
- deploy: kpm.deploy({{manifest.deploy}})
+ deploy: {{manifest.deploy}}
 
-}
+}, params)
